# leitungssatz-porting-to-ros2

./: .gitignore  README.md  urur5e_manipulator_base_linktool0_5000_1.000000_1.000000.ikcache
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/leitungssatz/include/leitungssatz/leitungssatz/msg/: rosidl_generator_c__visibility_control.h  rosidl_generator_cpp__visibility_control.hpp  rosidl_typesupport_fastrtps_cpp__visibility_control.h  vector_resolution.h
install/leitungssatz/include/leitungssatz/leitungssatz/msg/detail/: resolution__builder.hpp  resolution__functions.h  resolution__rosidl_typesupport_fastrtps_c.h  resolution__rosidl_typesupport_introspection_cpp.hpp  resolution__traits.hpp  vector_resolution__functions.c  vector_resolution__functions.h  vector_resolution__rosidl_typesupport_fastrtps_c.h  vector_resolution__rosidl_typesupport_introspection_c.h  vector_resolution__rosidl_typesupport_introspection_cpp.hpp  vector_resolution__type_support.cpp  vector_resolution__type_support.h  vector_resolution__type_support.hpp
install/leitungssatz/include/leitungssatz/leitungssatz/srv/: add_tf2.h  add_tf2.hpp  get_beep.h  get_beep.hpp  get_finished.h  get_finished.hpp  get_red_block.h  get_red_block.hpp  set_cable_orientation.h  set_cable_orientation.hpp  set_exposure.hpp
install/leitungssatz/include/leitungssatz/leitungssatz/srv/detail/: add_tf2__functions.h  add_tf2__rosidl_typesupport_fastrtps_c.h  add_tf2__rosidl_typesupport_introspection_cpp.hpp  add_tf2__traits.hpp  add_tf2__type_support.c  add_tf2__type_support.cpp  check_components__functions.h  check_components__rosidl_typesupport_fastrtps_cpp.hpp  check_components__rosidl_typesupport_introspection_c.h  check_components__struct.hpp  check_components__traits.hpp  check_components__type_support.cpp  get_beep__type_support.c  get_beep__type_support.h  get_board_location__functions.c  get_board_location__rosidl_typesupport_fastrtps_c.h  get_board_location__rosidl_typesupport_fastrtps_cpp.hpp  get_board_location__struct.h  get_board_location__struct.hpp  get_board_location__traits.hpp  get_board_location__type_support.c  get_board_location__type_support.hpp  get_finished__builder.hpp  get_finished__functions.c  get_finished__rosidl_typesupport_fastrtps_cpp.hpp  get_finished__rosidl_typesupport_introspection_c.h  get_finished__struct.h  get_finished__type_support.cpp  get_red_block__builder.hpp  get_red_block__functions.c  get_red_block__rosidl_typesupport_fastrtps_cpp.hpp  get_red_block__rosidl_typesupport_introspection_cpp.hpp  get_red_block__struct.h  get_red_block__struct.hpp  get_red_block__type_support.cpp  get_triangles__builder.hpp  get_triangles__rosidl_typesupport_fastrtps_c.h  get_triangles__rosidl_typesupport_introspection_c.h  get_triangles__rosidl_typesupport_introspection_cpp.hpp  get_triangles__type_support.c  (+21 more)
install/leitungssatz/lib/leitungssatz/: test_node
install/leitungssatz/local/lib/python3.10/dist-packages/leitungssatz-0.0.0-py3.10.egg-info/: SOURCES.txt  top_level.txt
install/leitungssatz/share/leitungssatz/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/leitungssatz/share/leitungssatz/cmake/: ament_cmake_export_dependencies-extras.cmake  ament_cmake_export_include_directories-extras.cmake  ament_cmake_export_libraries-extras.cmake  export_leitungssatz__rosidl_generator_cppExport.cmake  export_leitungssatz__rosidl_generator_pyExport-noconfig.cmake  export_leitungssatz__rosidl_generator_pyExport.cmake  export_leitungssatz__rosidl_typesupport_fastrtps_cppExport.cmake  leitungssatz__rosidl_typesupport_cExport-noconfig.cmake  leitungssatz__rosidl_typesupport_cExport.cmake  leitungssatz__rosidl_typesupport_introspection_cExport.cmake  rosidl_cmake-extras.cmake
install/leitungssatz/share/leitungssatz/msg/: Resolution.idl  VectorResolution.idl
install/leitungssatz/share/leitungssatz/srv/: AddTf2.idl  AddTf2_Request.msg  CheckComponents_Response.msg  GetBeep_Response.msg  GetRedBlock.idl  GetTriangles.idl  GetTriangles_Request.msg  GrabBuchse.idl  SelectCam_Request.msg  SelectCam_Response.msg  SetCableOrientation_Request.msg
install/robotiq_description/share/robotiq_description/: local_setup.sh  package.sh
install/ur_description/share/ament_index/resource_index/parent_prefix_path/: ur_description
install/ur_description/share/ur_description/: local_setup.sh  package.sh
install/ur_ros2_driver/share/ur_ros2_driver/: package.bash  package.zsh
log/: latest_build
src/leitungssatz/: .gitignore  CMakeLists.txt
src/leitungssatz/include/leitungssatz/: Gripper.hpp  Robot.hpp  Task.hpp  TaskScheduler.hpp  Wrench.hpp
src/leitungssatz/include/leitungssatz/Tasks/: GripperTask.hpp  InterTask.hpp  MoveTask.hpp  SpiralTask.hpp  ToolChangeTask.hpp  WirePushTask.hpp
src/leitungssatz/src/: Gripper.cpp  Task.cpp  TaskScheduler.cpp  Wrench.cpp  test_node.cpp
src/leitungssatz/src/Programs/: Main.cpp
src/leitungssatz/src/Tasks/: InterTask.cpp  MoveTask.cpp
src/leitungssatz/src/TestNodes/: test_gripper.cpp  test_wrench.cpp
src/leitungssatz_interfaces/: CMakeLists.txt  README.md  package.xml
src/leitungssatz_interfaces/examples/: ur_bridge_example.py
src/leitungssatz_interfaces/srv/: SetTrajectory.srv
src/ur5e_gripper_moveit_config/: .setup_assistant
src/ur5e_gripper_moveit_config/config/: kinematics.yaml  ros2_controllers.yaml  ur.srdf
src/ur5e_leitungssatz_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
src/ur5e_leitungssatz_moveit_config/config/: ompl_planning.yaml  sensor_kinect_pointcloud.yaml  sensors_3d.yaml  ur.srdf  ur.urdf.xacro
src/ur5e_leitungssatz_moveit_config/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
src/ur5e_leitungssatz_sim/: CMakeLists.txt  package.xml
src/ur5e_leitungssatz_sim/urdf/: ur5e_gripper.urdf.xacro
src/ur_ros2_driver/: CMakeLists.txt  package.xml
src/ur_ros2_driver/msg/: GripperInfo.msg
(+15 files in other folders)
